--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 		<script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
 	  
 		<link rel="canonical" href="" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
+
+		
+
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700"/>
+
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
 		<style amp-boilerplate>
 			body {
@@ -81,505 +85,7 @@
 				}
 			</style>
 		</noscript>
-		<style amp-custom="">
-	
-	* {
-				box-sizing: border-box;
-				font-family: 'Roboto';
-				transition: all 0.2s linear;
-				font-size: 16px;
-				margin: 0px;
-				padding: 0px;
-			}
-
-			html,
-			body {
-				margin: 0px;
-				padding: 0px;
-				background-color: #f5f6fa;
-			}
-
-			.gradient-bg {
-				background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%);
-			}
-
-			.content-width {
-				width: 80%;
-			}
-
-			.content {
-				margin: 0 auto;
-				padding: 3em 0px;
-				line-height: 160%;
-			}
-
-
-			h1 {
-				font-size: 2em;
-				line-height: 120%;
-				margin-bottom: 1em;
-				text-decoration: underline;
-				text-decoration-color: #FC7500;
-			}
-
-			h2 {
-				font-size: 2em;
-				word-spacing: 2px;
-				text-align: center;
-				margin-bottom:1em;
-				letter-spacing: 1px;
-			}
-
-			h2:after {
-				display: block;
-				height: 2px;
-				background-color: #487eb0;
-				content: ' ';
-				width: 100px;
-				margin: 0 auto;
-				margin-top:25px;
-			}
-
-			h3 {
-				font-size: 1.5em;
-				margin-bottom: 1em;
-			}
-			.flex {
-				display: flex;
-			}
-
-			.flex-wrap {
-				flex-wrap: wrap;
-			}
-
-			.flex-center {
-				justify-content: center;
-				align-items: center;
-			}
-
-			.flex-space-between {
-				justify-content: space-between;
-			}
-
-			.flex-column {
-				flex-direction: column;
-			}
-
-			.flex-half {
-				width: 48%;
-			}
-
-			.text-center {
-				text-align: center;
-			}
-
-			.text-capitalize {
-				text-transform: capitalize;
-			}
-
-			.text-bold {
-				font-weight: bold;
-			}
-
-			.text-secondary {
-				color: #515151;
-			}
-
-			.btn-primary {
-				background-color: #FC7500;
-				border: 1px solid transparent;
-				color: #fff;
-				cursor: pointer;
-			}
-
-			.btn-primary:hover {
-				background-color: #487eb0;
-				border-color: #487eb0;
-			}
-
-			a {
-				color: #487eb0;
-			}
-
-			a:hover {
-				color:#FC7500;
-			}
-
-			.border-round {
-				border-radius: 5px;
-			}
-
-			.box-shadow {
-				box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-			}
-
-			.animate {
-				transition: all 0.2s ease-in-out;
-			}
-
-			header {
-				width: 100%;
-				min-height: 80px;
-			}
-
-			#logo {
-				width:100%;
-				height: 100%;
-				flex-wrap: wrap;
-			}
-
-			#logo a {
-				width: auto;
-			}
-
-			#logo amp-img {
-				max-width: 100%;
-			}
-
-			#nav {
-				background-color: #fff;
-			}
-			#nav header{
-				padding: 0 0;
-				width: 80%;
-				margin: auto;
-			}
-			.tel {
-				padding-top: 20px;
-			}
-			.click-to-call {
-				color: #FC7500;
-				font-size:2rem;
-				padding: 0px .5rem;
-			}
-
-			#nav-wrapper {
-				position: relative;
-			}
-
-			#nav-content {
-				width: 56%;
-				color: #000;
-			}
-
-			#nav-divider {
-				height: 500px;
-				background-image: url('img/stack-coins-calculator-toy-car-pen-template\ \(2\).jpg');
-			}
-			.text-secondary1{
-				font-size: 0.98rem;
-				font-weight: 600;
-				width: 90%;
-				margin:auto;
-			}
-
-			.divider {
-				width: 100%;
-				background-size: cover;
-				background-position: top;
-				background-attachment: fixed;
-				background-repeat: no-repeat;
-			}
-
-			/* LEAD COLLECTION FORM */
-			#lead-collection-form {
-				width: 40%;
-				padding: 2em 1.5em;
-				background: #fff;
-				position: absolute;
-				top: 0;
-				right: 0;
-			}
-			input {
-				width: 100%;
-				outline: none;
-				border: 1px solid #b1b1b1;
-				padding: 1em;
-				margin-bottom: 1em;
-			}
-			input:focus {
-				border: 2px solid #487eb0;
-			}
-			#lead-collection-form input[type='submit'] {
-				text-transform: uppercase;
-			}
-
-		
-			.service-item {
-				width: 48%;
-				margin-bottom: 4em;
-			}
-			.service-image {
-				width: 20%;
-			}
-			.service-image amp-img {
-				max-width: 90%;
-			}
-			.service-content {
-				width: 78%;
-			}
-			.service-content h3 {
-				color: #FC7500;
-			}
-
-			/** why-us **/
-			#why-us {
-				background-color:#F5F4F0;
-			}
-			#why-us ul li::marker {
-				color: #487eb0;
-				font-size: 1.3em;
-				}
-			#why-us ul li {
-				font-size: 1.5rem;
-				font-weight: 600px;
-				padding: 10px 0px;
-
-			}
-.tel-link a{
-	max-width: 150px;
-    font-size: 3em;
-	font-weight: 800;
-}
-			/** testimonials **/
-			.testimonial {
-				width: 31%;
-				padding: 1.5em;
-				background: #fff;
-			}
-
-			.testimonial h3 {
-				margin-bottom: 0;
-			}
-
-			.testimonial-text {
-				margin: 0.9em 0;
-			}
-
-			#testimonials h3 {
-				color: #FC7500;
-			}
-
-			#support {
-				color: #fff;
-				background: #2c3e50;
-			}
-			#support a {
-				font-size: 1.5em;
-				color: #e67e22;
-			}
-			a#support-btn {
-				max-width: 150px;
-				margin: 1.5em auto;
-				padding: .5em 1.8em;
-				text-decoration: none;
-				color: #fff;
-			}
-
-			#last-divider {
-				height:200px;
-				background-position: center;
-				background-image: url('img/overhead-view-toy-car-calculator-coin-stack-financial-report\ \(1\).jpg');
-			}
-			#last-divider a {
-				font-size: 1.5em;
-			}
-
-    .scrollToTop {
-	  padding:20px 40px;
-      z-index: 9999; 
-	  font-size: 1.7em;
-      bottom:1rem;
-      left: 1rem;
-      position: fixed;
-      opacity: 0;
-      visibility: hidden;
-	  text-decoration: none;
-    }
-  .scrollToTop:hover{
-	  color: #fff;
-  }
-    /* we move the anchor down to componsate the fixed header */
-    .target {
-      position: relative;
-    }
-			@media only screen and (max-width: 1030px) {
-				header {
-					margin-bottom: 1em;
-				}
-				#logo a {
-					width: auto;
-				}
-				#nav-content {
-					width: 50%;
-					color: #000;
-				}
-				#logo amp-img {
-					max-width: 90%;
-				}
-				#lead-collection-form {
-					width: 45%;
-				}
-				#nav-divider {
-					height: 400px;
-				}
-				#why-us ul li::marker {
-		
-		font-size: 1.2em;
-		}
-	#why-us ul li {
-		font-size: 1.2rem;
-		font-weight: 600px;
-		padding: 5px 0px;
-	}
-	.flex-half{
-		padding: 0px 20px;
-	}
-	
-			}
-
-			@media only screen and (max-width: 768px) {
-				header {
-					margin-bottom: 0;
-				}
-				#logo a {
-					width: auto;
-				}
-				#nav-wrapper {
-					flex-direction: column;
-					text-align: center;
-					padding: 2em 0;
-				}
-				#lead-collection-form,
-				#nav-content {
-					width: 100%;
-				}
-				#lead-collection-form {
-					margin-top: 2em;
-					position: relative;
-				}
-				#nav-divider {
-					height: 300px;
-				}
-				.content-width {
-					width: 90%;
-				}
-				.service-item {
-					width: 100%;
-				}
-				h2 {
-					line-height: 130%;
-				}
-				.testimonial {
-					width: 48%;
-					margin-bottom: 2em;
-				}
-				.flex-half{
-					width: 100%;
-				}
-
-			}
-
-			@media only screen and (max-width: 600px) {
-			
-				#nav-wrapper {
-					padding: 0;
-				}
-				h1 {
-					font-size: 1.7em;
-					margin-top: 1em;
-				}
-
-				h2 {
-					font-size: 1.6em;
-					margin-bottom: 1em;
-				}
-
-				h3 {
-					font-size: 1.4em;
-				}
-				.click-to-call{
-					font-size: 1.5rem;
-				}
-
-				#lead-collection-form {
-					margin-bottom: 2em;
-				}
-
-				.service-item {
-					flex-direction: column;
-					margin-bottom: 3em;
-				}
-
-				.service-item .service-image {
-					width: 100%;
-					margin-bottom: 2em;
-				}
-
-				.service-item .service-image amp-img {
-					max-width: 45%;
-					margin: 0 auto;
-				}
-
-				.service-item .service-content {
-					width: 100%;
-				}
-	
-				.flex-half {
-					width: 100%;
-				}
-
-				.testimonial {
-					width: 100%;
-				}
-
-				#footer-content {
-					width: 90%;
-					text-align: center;
-				}
-
-				#footer-content p {
-					margin-bottom: 0.5em;
-				}
-				.click-to-call {
-					font-size:1.5rem;
-				}
-				#logo {
-					justify-content: center;
-				}
-			.scrollToTop {
-				padding:18px 30px;
-				font-size: 1.2em;
-				}
-
-				#why-us ul li::marker {
-				font-size: 1.3em;
-				}
-				#why-us ul li {
-				font-size: 1.3rem;
-				font-weight: 600px;
-				padding: 10px 0px;
-				}
-
-				}
-		
-			@media only screen and (max-width: 350px){
-				#why-us ul li::marker {
-		
-				font-size: 1.1em;
-				}
-			#why-us ul li {
-				font-size: 1.1rem;
-				font-weight: 600px;
-				padding: 5px 0px;
-			}
-			.flex-half{
-				padding: 0px 20px;
-			}
-			}
-		
-		</style>
-
+		<style amp-custom="">*{box-sizing:border-box;font-family:Roboto;transition:all .2s linear;font-size:16px;margin:0;padding:0}body,html{margin:0;padding:0;background-color:#f5f6fa}.gradient-bg{background-image:linear-gradient(45deg,#874da2 0,#c43a30 100%)}.content-width{width:80%}.content{margin:0 auto;padding:3em 0;line-height:160%}h1{font-size:2em;line-height:120%;margin-bottom:1em;text-decoration:underline;text-decoration-color:#fc7500}h2{font-size:2em;word-spacing:2px;text-align:center;margin-bottom:1em;letter-spacing:1px}h2:after{display:block;height:2px;background-color:#487eb0;content:' ';width:100px;margin:0 auto;margin-top:25px}h3{font-size:1.5em;margin-bottom:1em}.flex{display:flex}.flex-wrap{flex-wrap:wrap}.flex-center{justify-content:center;align-items:center}.flex-space-between{justify-content:space-between}.flex-column{flex-direction:column}.flex-half{width:48%}.text-center{text-align:center}.text-capitalize{text-transform:capitalize}.text-bold{font-weight:700}.text-secondary{color:#515151}.btn-primary{background-color:#fc7500;border:1px solid transparent;color:#fff;cursor:pointer}.btn-primary:hover{background-color:#487eb0;border-color:#487eb0}a{color:#487eb0}a:hover{color:#fc7500}.border-round{border-radius:5px}.box-shadow{box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24)}.animate{transition:all .2s ease-in-out}header{width:100%;min-height:80px}#logo{width:100%;height:100%;flex-wrap:wrap}#logo a{width:auto}#logo amp-img{max-width:100%}#nav{background-color:#fff}#nav header{padding:0 0;width:80%;margin:auto}.tel{padding-top:20px}.click-to-call{color:#fc7500;font-size:2rem;padding:0 .5rem}#nav-wrapper{position:relative}#nav-content{width:56%;color:#000}#nav-divider{height:500px;background-image:url('img/stack-coins-calculator-toy-car-pen-template\ \(2\).jpg')}.text-secondary1{font-size:.98rem;font-weight:600;width:90%;margin:auto}.divider{width:100%;background-size:cover;background-position:top;background-attachment:fixed;background-repeat:no-repeat}#lead-collection-form{width:40%;padding:2em 1.5em;background:#fff;position:absolute;top:0;right:0}input{width:100%;outline:0;border:1px solid #b1b1b1;padding:1em;margin-bottom:1em}input:focus{border:2px solid #487eb0}#lead-collection-form input[type=submit]{text-transform:uppercase}.service-item{width:48%;margin-bottom:4em}.service-image{width:20%}.service-image amp-img{max-width:90%}.service-content{width:78%}.service-content h3{color:#fc7500}#why-us{background-color:#f5f4f0}#why-us ul li::marker{color:#487eb0;font-size:1.3em}#why-us ul li{font-size:1.5rem;font-weight:600px;padding:10px 0}.tel-link a{max-width:150px;font-size:3em;font-weight:800}.testimonial{width:31%;padding:1.5em;background:#fff}.testimonial h3{margin-bottom:0}.testimonial-text{margin:.9em 0}#testimonials h3{color:#fc7500}#support{color:#fff;background:#2c3e50}#support a{font-size:1.5em;color:#e67e22}a#support-btn{max-width:150px;margin:1.5em auto;padding:.5em 1.8em;text-decoration:none;color:#fff}#last-divider{height:200px;background-position:center;background-image:url('img/overhead-view-toy-car-calculator-coin-stack-financial-report\ \(1\).jpg')}#last-divider a{font-size:1.5em}.scrollToTop{padding:20px 40px;z-index:9999;font-size:1.7em;bottom:1rem;left:1rem;position:fixed;opacity:0;visibility:hidden;text-decoration:none}.scrollToTop:hover{color:#fff}.target{position:relative}@media only screen and (max-width:1030px){header{margin-bottom:1em}#logo a{width:auto}#nav-content{width:50%;color:#000}#logo amp-img{max-width:90%}#lead-collection-form{width:45%}#nav-divider{height:400px}#why-us ul li::marker{font-size:1.2em}#why-us ul li{font-size:1.2rem;font-weight:600px;padding:5px 0}.flex-half{padding:0 20px}}@media only screen and (max-width:768px){header{margin-bottom:0}#logo a{width:auto}#nav-wrapper{flex-direction:column;text-align:center;padding:2em 0}#lead-collection-form,#nav-content{width:100%}#lead-collection-form{margin-top:2em;position:relative}#nav-divider{height:300px}.content-width{width:90%}.service-item{width:100%}h2{line-height:130%}.testimonial{width:48%;margin-bottom:2em}.flex-half{width:100%}}@media only screen and (max-width:600px){#nav-wrapper{padding:0}h1{font-size:1.7em;margin-top:1em}h2{font-size:1.6em;margin-bottom:1em}h3{font-size:1.4em}.click-to-call{font-size:1.5rem}#lead-collection-form{margin-bottom:2em}.service-item{flex-direction:column;margin-bottom:3em}.service-item .service-image{width:100%;margin-bottom:2em}.service-item .service-image amp-img{max-width:45%;margin:0 auto}.service-item .service-content{width:100%}.flex-half{width:100%}.testimonial{width:100%}#footer-content{width:90%;text-align:center}#footer-content p{margin-bottom:.5em}.click-to-call{font-size:1.5rem}#logo{justify-content:center}.scrollToTop{padding:18px 30px;font-size:1.2em}#why-us ul li::marker{font-size:1.3em}#why-us ul li{font-size:1.3rem;font-weight:600px;padding:10px 0}}@media only screen and (max-width:350px){#why-us ul li::marker{font-size:1.1em}#why-us ul li{font-size:1.1rem;font-weight:600px;padding:5px 0}.flex-half{padding:0 20px}}</style>
 	</head>
 	<body>
 		<!-- nav section -->
@@ -872,8 +378,6 @@
 	<a id="scrollToTopButton" on="tap:top.scrollTo(duration=300)" class="scrollToTop
 	btn-primary border-round text-center text-bold text-capitalize" href="#"
 	id="support-btn">Get Quote</a>
-  
-
 
 		<footer class="flex flex-column flex-center content">
 			<div class="flex flex-center flex-column" id="footer-content">
