--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
 		<script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
 	  
-		<link rel="canonical" href="" />
+		<link rel="canonical" href="#"/>
 
 		
 
