edit amp validator warnings

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
 	<a id="scrollToTopButton" on="tap:top.scrollTo(duration=300)" class="scrollToTop
 	btn-primary border-round text-center text-bold text-capitalize" href="#"
-	id="support-btn">Get Quote</a>
+	>Get Quote</a>
 
 		<footer class="flex flex-column flex-center content">
 			<div class="flex flex-center flex-column" id="footer-content">
